k8s/charts/custom/external-dns-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-dns-octopus-deploy
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: octopus.axatol.xyz
    external-dns.alpha.kubernetes.io/target: http://octopus-deploy.octopus.svc.cluster.local:80
spec:
  type: ClusterIP
  clusterIP: None
