k8s/charts/custom/mqtt.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-deployment
  namespace: mqtt
spec:
  selector:
    matchLabels:
      app: mqtt
  template:
    metadata:
      labels:
        app: mqtt
    spec:
      nodeSelector:
        axatol.xyz/supports-nfs: "true"
      containers:
        - image: eclipse-mosquitto
          name: mqtt-broker
          ports:
            - containerPort: 1883
              name: mqtt
          volumeMounts:
            - mountPath: /mosquitto/config
              name: data
              subPath: config
            - mountPath: /mosquitto/data
              name: data
              subPath: data
            - mountPath: /mosquitto/log
              name: data
              subPath: log
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mqtt-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mqtt-deployment-service
  namespace: mqtt
spec:
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
  selector:
    app: mqtt
---
apiVersion: v1
kind: Service
metadata:
  name: mqtt-service
  namespace: mqtt
spec:
  ports:
    - nodePort: 31883
      port: 1883
      targetPort: mqtt
  selector:
    app: mqtt
  type: NodePort
